--- a/analyse_results.ipynb
+++ b/analyse_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +37,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/run/user/1005944/gvfs/smb-share:server=fs.ista.ac.at,share=home/avillanu/hydra/example/out_bayesW/weibull_1000_200.csv\", header=None)\n",
+    "df = pd.read_csv(\"/run/user/1005944/gvfs/smb-share:server=fs.ista.ac.at,share=home/avillanu/hydra/example/out_bayesW/weibull_100_200.csv\", header=None)\n",
     "num_mix = df[7][0]\n",
     "header = [\"iter\", \"mu\", \"sigmaG\", \"alpha\", \"h2\", \"num_markers\", \"num_groups\", \"num_mixtures\"]\n",
     "header.extend([\"sigmaG_\"+str(i) for i in range(num_mix)])\n",
     "header.append(str(\"PIP\"))\n",
     "df.columns = header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iter</th>\n",
+       "      <th>mu</th>\n",
+       "      <th>sigmaG</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>h2</th>\n",
+       "      <th>num_markers</th>\n",
+       "      <th>num_groups</th>\n",
+       "      <th>num_mixtures</th>\n",
+       "      <th>sigmaG_0</th>\n",
+       "      <th>sigmaG_1</th>\n",
+       "      <th>sigmaG_2</th>\n",
+       "      <th>sigmaG_3</th>\n",
+       "      <th>PIP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4.15644</td>\n",
+       "      <td>0.001999</td>\n",
+       "      <td>5.554363</td>\n",
+       "      <td>0.036137</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.001999</td>\n",
+       "      <td>0.969733</td>\n",
+       "      <td>0.008138</td>\n",
+       "      <td>0.004197</td>\n",
+       "      <td>0.017932</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   iter       mu    sigmaG     alpha        h2  num_markers  num_groups  \\\n",
+       "0     0  4.15644  0.001999  5.554363  0.036137            5           1   \n",
+       "\n",
+       "   num_mixtures  sigmaG_0  sigmaG_1  sigmaG_2  sigmaG_3       PIP  \n",
+       "0             4  0.001999  0.969733  0.008138  0.004197  0.017932  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"/run/user/1005944/gvfs/smb-share:server=fs.ista.ac.at,share=home/avillanu/hydra/example/out_bayesW/weibull_1000_200.csv\", header=None)"
    ]
   },
   {
@@ -147,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +245,268 @@
     "header.extend([\"sigmaG_\"+str(i) for i in range(num_mix)])\n",
     "header.append(str(\"PIP\"))\n",
     "df.columns = header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iter</th>\n",
+       "      <th>mu</th>\n",
+       "      <th>sigmaG</th>\n",
+       "      <th>alpha</th>\n",
+       "      <th>h2</th>\n",
+       "      <th>num_markers</th>\n",
+       "      <th>num_groups</th>\n",
+       "      <th>num_mixtures</th>\n",
+       "      <th>sigmaG_0</th>\n",
+       "      <th>sigmaG_1</th>\n",
+       "      <th>sigmaG_2</th>\n",
+       "      <th>sigmaG_3</th>\n",
+       "      <th>PIP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.940170</td>\n",
+       "      <td>0.011255</td>\n",
+       "      <td>3.494694</td>\n",
+       "      <td>0.077117</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.011255</td>\n",
+       "      <td>0.993853</td>\n",
+       "      <td>0.005973</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>0.000138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4.087389</td>\n",
+       "      <td>0.016061</td>\n",
+       "      <td>8.992022</td>\n",
+       "      <td>0.441182</td>\n",
+       "      <td>162</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.016061</td>\n",
+       "      <td>0.982834</td>\n",
+       "      <td>0.005532</td>\n",
+       "      <td>0.009871</td>\n",
+       "      <td>0.001763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10</td>\n",
+       "      <td>4.098483</td>\n",
+       "      <td>0.014717</td>\n",
+       "      <td>9.538867</td>\n",
+       "      <td>0.448747</td>\n",
+       "      <td>202</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.014717</td>\n",
+       "      <td>0.978421</td>\n",
+       "      <td>0.008522</td>\n",
+       "      <td>0.012875</td>\n",
+       "      <td>0.000181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>4.102032</td>\n",
+       "      <td>0.015129</td>\n",
+       "      <td>9.869531</td>\n",
+       "      <td>0.472548</td>\n",
+       "      <td>206</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.015129</td>\n",
+       "      <td>0.981066</td>\n",
+       "      <td>0.008896</td>\n",
+       "      <td>0.009311</td>\n",
+       "      <td>0.000727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20</td>\n",
+       "      <td>4.100793</td>\n",
+       "      <td>0.016537</td>\n",
+       "      <td>9.837317</td>\n",
+       "      <td>0.493129</td>\n",
+       "      <td>226</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.016537</td>\n",
+       "      <td>0.976787</td>\n",
+       "      <td>0.012336</td>\n",
+       "      <td>0.010657</td>\n",
+       "      <td>0.000220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>475</td>\n",
+       "      <td>4.099307</td>\n",
+       "      <td>0.018451</td>\n",
+       "      <td>9.682979</td>\n",
+       "      <td>0.512593</td>\n",
+       "      <td>241</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.018451</td>\n",
+       "      <td>0.975708</td>\n",
+       "      <td>0.013918</td>\n",
+       "      <td>0.010225</td>\n",
+       "      <td>0.000148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>480</td>\n",
+       "      <td>4.099435</td>\n",
+       "      <td>0.014936</td>\n",
+       "      <td>9.868736</td>\n",
+       "      <td>0.469304</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.014936</td>\n",
+       "      <td>0.978732</td>\n",
+       "      <td>0.009908</td>\n",
+       "      <td>0.011257</td>\n",
+       "      <td>0.000103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>485</td>\n",
+       "      <td>4.102656</td>\n",
+       "      <td>0.019517</td>\n",
+       "      <td>9.862853</td>\n",
+       "      <td>0.535782</td>\n",
+       "      <td>217</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.019517</td>\n",
+       "      <td>0.977839</td>\n",
+       "      <td>0.012216</td>\n",
+       "      <td>0.009700</td>\n",
+       "      <td>0.000245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>490</td>\n",
+       "      <td>4.100951</td>\n",
+       "      <td>0.017062</td>\n",
+       "      <td>9.797596</td>\n",
+       "      <td>0.498921</td>\n",
+       "      <td>215</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.017062</td>\n",
+       "      <td>0.979872</td>\n",
+       "      <td>0.010721</td>\n",
+       "      <td>0.009163</td>\n",
+       "      <td>0.000244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>495</td>\n",
+       "      <td>4.099137</td>\n",
+       "      <td>0.016052</td>\n",
+       "      <td>9.599930</td>\n",
+       "      <td>0.473499</td>\n",
+       "      <td>244</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.016052</td>\n",
+       "      <td>0.975334</td>\n",
+       "      <td>0.014234</td>\n",
+       "      <td>0.010388</td>\n",
+       "      <td>0.000044</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    iter        mu    sigmaG     alpha        h2  num_markers  num_groups  \\\n",
+       "0      0  3.940170  0.011255  3.494694  0.077117           70           1   \n",
+       "1      5  4.087389  0.016061  8.992022  0.441182          162           1   \n",
+       "2     10  4.098483  0.014717  9.538867  0.448747          202           1   \n",
+       "3     15  4.102032  0.015129  9.869531  0.472548          206           1   \n",
+       "4     20  4.100793  0.016537  9.837317  0.493129          226           1   \n",
+       "..   ...       ...       ...       ...       ...          ...         ...   \n",
+       "95   475  4.099307  0.018451  9.682979  0.512593          241           1   \n",
+       "96   480  4.099435  0.014936  9.868736  0.469304          230           1   \n",
+       "97   485  4.102656  0.019517  9.862853  0.535782          217           1   \n",
+       "98   490  4.100951  0.017062  9.797596  0.498921          215           1   \n",
+       "99   495  4.099137  0.016052  9.599930  0.473499          244           1   \n",
+       "\n",
+       "    num_mixtures  sigmaG_0  sigmaG_1  sigmaG_2  sigmaG_3       PIP  \n",
+       "0              4  0.011255  0.993853  0.005973  0.000037  0.000138  \n",
+       "1              4  0.016061  0.982834  0.005532  0.009871  0.001763  \n",
+       "2              4  0.014717  0.978421  0.008522  0.012875  0.000181  \n",
+       "3              4  0.015129  0.981066  0.008896  0.009311  0.000727  \n",
+       "4              4  0.016537  0.976787  0.012336  0.010657  0.000220  \n",
+       "..           ...       ...       ...       ...       ...       ...  \n",
+       "95             4  0.018451  0.975708  0.013918  0.010225  0.000148  \n",
+       "96             4  0.014936  0.978732  0.009908  0.011257  0.000103  \n",
+       "97             4  0.019517  0.977839  0.012216  0.009700  0.000245  \n",
+       "98             4  0.017062  0.979872  0.010721  0.009163  0.000244  \n",
+       "99             4  0.016052  0.975334  0.014234  0.010388  0.000044  \n",
+       "\n",
+       "[100 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
