--- a/tests_algorithm_1.ipynb
+++ b/tests_algorithm_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,12 @@
     "import Bayes_arms\n",
     "\n",
     "from BayesW_utils import *\n",
-    "from distributions import *"
+    "from Distributions import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
