remove output files

--- a/more_trials.ipynb
+++ b/more_trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,44 +157,39 @@
     "\n",
     "beta[index] = b\n",
     "\n",
-    "g = markers.dot(beta.reshape(M,1))\n",
+    "g = markers.dot(beta)\n",
     "\n",
     "gumbel_dis = stats.gumbel_r(loc=0, scale=1)\n",
-    "w = gumbel_dis.rvs(size=(N,1))\n",
+    "w = gumbel_dis.rvs(size=N)\n",
     "\n",
     "log_data = mu + g + w/alpha + np.euler_gamma/alpha\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.015801510704414393"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.var(log_data)"
+    "censoring_time = np.random.uniform(0,600, size=N)\n",
+    "\n",
+    "cens = np.log(censoring_time)\n",
+    "\n",
+    "a = np.where((log_data <= cens) == False, cens, log_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.where(isFailure , log_data, cens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +204,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2026365184267835"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_data_log[d_fail == 0].var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hpars_file = \"files_sim/Weibull_dense_1000_20000.h2\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +246,26 @@
     "y_data_log2 = load_phen(phen_file)\n",
     "\n",
     "betas = pd.read_table(\"/home/avillanu/BayesW_data_sim/Weibull.beta\", sep=\" \", header=None)[1].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1150830051059437"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_data_log2[d_fail == 0].var()"
    ]
   },
   {
