trying ars with derivatives

--- a/tests_and_old_scripts/analyse_results.ipynb
+++ b/tests_and_old_scripts/analyse_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,14 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "from numpy.linalg import norm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from Load_data import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +35,57 @@
     "rc('font',**{'family':'serif','serif':['Palatino'], 'size':14})\n",
     "rc('text', usetex=True)\n",
     "plt.rc('axes', prop_cycle=(cycler('color', ['red', 'gray', 'black', 'blue', 'green'])))#, )))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est_betas = np.loadtxt(\"out_files/betas_out_Weibull_dense_1000_10000_67.txt\")\n",
+    "true_betas = get_betas(\"files_sim/Weibull_dense_1000_10000_67.beta\", 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, ..., 0, 0, 0])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(est_betas > 0)*1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\"pred\": (est_betas > 0)*1 , \"true\": (true_betas > 0)*1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP = len(df[(df[\"pred\"] == 1) & (df[\"true\"] == 1)])\n",
+    "TN = len(df[(df[\"pred\"] == 0) & (df[\"true\"] == 0)])\n",
+    "FP = len(df[(df[\"pred\"] == 1) & (df[\"true\"] == 0)])\n",
+    "FN = len(df[(df[\"pred\"] == 0) & (df[\"true\"] == 1)])"
    ]
   },
   {
